--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title></title>
+    <script src="assets/js/app.js"></script>
+    <title>Pick Me!</title>
 </head>
 <body>
-    <script src="assets/js/app.js"></script>
+    <h1>Pick Me Game</h1>
+    <button id="start">Play!</button>
+    <div class="game-container">
+        Time left: <span>5s</span>
+        <div class="main-pic"></div>
+        <div class="grid"></div>
+    </div>
 </body>
 </html>
