Add cards display

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,27 @@
     <script src="assets/js/app.js"></script>
     <title>Pick Me!</title>
 </head>
+
 <body>
     <h1>Pick Me Game</h1>
     <button id="start">Play!</button>
     <div class="game-container">
         Time left: <span>5s</span>
-        <div class="main-pic"></div>
-        <div class="grid"></div>
+        <div class="main-pic">
+            <img class="preview">
+        </div>
+        <div class="grid">
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+        </div>
     </div>
 </body>
+
 </html>
