Add score game and update cards elements

--- a/index.html
+++ b/index.html
@@ -6,28 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/app.js"></script>
-    <title>Pick Me!</title>
+    <script src="assets/js/script.js"></script>
+    <title>Find Me!</title>
 </head>
 
 <body>
-    <h1>Pick Me Game</h1>
-    <button id="start">Play!</button>
     <div class="game-container">
-        Time left: <span>5s</span>
+        <h1>Find Me!</h1>
+        <button id="start">Play!</button>
+        <div class="game-info">
+            Time left: <span class="time-value">5s</span>
+            Score: <span class="score-value">0</span>
+        </div>
         <div class="main-pic">
             <img class="preview">
         </div>
         <div class="grid">
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
-            <div class="card"><img src="" alt="" class="cover"><img src="" alt="" class="picture"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
+            <div class="card"><img src="assets/images/reverse-pattern.jpg" alt="" class="reverse"><img src="" alt=""
+                    class="averse"></div>
         </div>
     </div>
 </body>
