Fix problem with button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
         <div class="game-info-container">
                 <h1>Find Me!</h1>
-                <div id="start" class="button">Play!</div>
-                <div id="rules" class="button">Rules</div>
+                <button id="start" class="button">Play!</button>
+                <button id="rules" class="button">Rules</button>
         </div>
         <div class="rules-container">
                 <h1>Rules of the <span class="find-me">Find Me!</span> Game</h1>
