Add logo images to web page

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 <body>
     <div class="page-content">
         <div class="page menu-view">
-            <h1>Find Me!</h1>
+            <a href="index.html">
+                <img class="logo" alt="logo" src="assets/images/logo-white.png">
+            </a>
             <button id="start" class="button">PLAY</button>
             <button id="rules" class="button"><span>RULES</span></button>
         </div>
         <div class="page game-view">
             <div class="game-container">
+                <a href="index.html">
+                    <img class="logo" alt="logo" src="assets/images/logo-white.png">
+                </a>
                 <div class="game-stats-container">
                     <div class="game-stats">
                         <span class="timer-text">Time</span>: <span class="time-value">5</span>
@@ -35,39 +40,39 @@
                 </div>
                 <div class="grid">
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                     <div class="card">
-                        <img src="assets/images/reverse-pattern.jpg" alt="" class="reverse">
+                        <img src="assets/images/logo-blue.png" alt="" class="reverse">
                         <img src="" alt="" class="averse">
                     </div>
                 </div>
