Add game over modal

--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
                 <p>4. For every match you gain 1 point.</p>
             </div>
         </div>
-        <div id="game-over" class="modal">
+        <div id="modal-game-over" class="modal">
             <div class="modal-content">
+                <span id="close-game-over" class="close">&times;</span>
                 <h2>GAME OVER</h2>
                 <p>You lost the game.</p>
                 <p>Your score was <span id="end-score">0</span></p>
-                <button class="button">PLAY AGAIN</button>
+                <button class="button large">PLAY AGAIN</button>
             </div>
         </div>
     </div>
