--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="page game-view">
             <div class="game-container">
                 <a href="index.html">
-                    <img class="logo" alt="logo" src="assets/images/logo-white.png">
+                    <img class="logo" id="logo" alt="logo" src="assets/images/logo-white.png">
                 </a>
                 <div class="game-stats-container">
                     <div class="game-stats">
-                        <span class="timer-text">Time</span>: <span class="time-value">5</span>
+                        <span class="timer-text">Time</span>: <span class="time-value"></span>
                     </div>
                     <div class="game-stats">
                         Score: <span class="score-value">0</span>
