Add main menu button in game over modal

--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
         </div>
         <div id="modal-game-over" class="modal">
             <div class="modal-content">
-                <span id="close-game-over" class="close">&times;</span>
-                <h2>GAME OVER</h2>
-                <p>You lost the game.</p>
-                <p>Your score was <span id="end-score">0</span></p>
-                <button class="button large">PLAY AGAIN</button>
+                <div class="modal-text-content">
+                    <h2>GAME OVER</h2>
+                    <p>You lost the game.</p>
+                    <p>Your score was <span id="end-score">0</span></p>
+                    <button class="button go-btn" id="play-again-button">PLAY AGAIN</button>
+                    <button class="button go-btn" id="main-menu-button">MAIN MENU</button>
+                </div>
             </div>
         </div>
     </div>
