Fix translation mistake

--- a/index.html
+++ b/index.html
@@ -36,40 +36,40 @@
             </figure>
             <div class="grid">
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
                 <figure class="card">
-                    <img src="assets/images/logo-blue.png" alt="" class="reverse">
-                    <img src="" alt="" class="averse">
+                    <img src="assets/images/logo-blue.png" alt="" class="card-back">
+                    <img src="" alt="" class="card-front">
                 </figure>
             </div>
         </section>
